--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 antlr4-python3-runtime==4.9.3
+anyio==3.6.2
 attrs==22.1.0
 certifi==2022.9.24
 charset-normalizer==2.1.1
 click==8.1.3
 cycler==0.11.0
+fastapi==0.87.0
 fonttools==4.38.0
 htmlmin==0.1.12
 hydra-core==1.2.0
@@ -37,6 +39,8 @@ scipy==1.9.3
 seaborn==0.12.1
 six==1.16.0
 sklearn==0.0
+sniffio==1.3.0
+starlette==0.21.0
 statsmodels==0.13.5
 tangled-up-in-unicode==0.2.0
 threadpoolctl==3.1.0
