--- a/airflow_ml_dags/docker-compose.yaml
+++ b/airflow_ml_dags/docker-compose.yaml
@@ -11,12 +11,12 @@ x-environment: &airflow_environment
   - AIRFLOW__CORE__FERNET_KEY=${FERNET_KEY}
   - AIRFLOW_VAR_LOCAL_DATA_DIR=${LOCAL_DATA_DIR}
   - AIRFLOW__SMTP__SMTP_HOST=smtp.mail.ru
-  - AIRFLOW__SMTP__SMTP_STARTTLS=True
-  - AIRFLOW__SMTP__SMTP_SSL=False
-  - AIRFLOW__SMTP__SMTP_USER=ivankozyrev02@main.ru
+  - AIRFLOW__SMTP__SMTP_STARTTLS=False
+  - AIRFLOW__SMTP__SMTP_SSL=True
+  - AIRFLOW__SMTP__SMTP_USER=ivankozyrev02@mail.ru
   - AIRFLOW__SMTP__SMTP_PASSWORD=${PASSWORD}
   - AIRFLOW__SMTP__SMTP_PORT=465
-  - AIRFLOW__SMTP__SMTP_MAIL_FROM=ivankozyrev02@main.ru
+  - AIRFLOW__SMTP__SMTP_MAIL_FROM=ivankozyrev02@mail.ru
 
 x-airflow-image: &airflow_image apache/airflow:2.3.0-python3.8
 # ====================================== /AIRFLOW ENVIRONMENT VARIABLES ======================================
@@ -72,7 +72,7 @@ services:
       - logs:/opt/airflow/logs
       - ./dags/:/opt/airflow/dags/
       - ./data/:/opt/airflow/data/
-      - ./tests:/opt/airflow/tests/
+      - ./tests/:/opt/airflow/tests/
       - /var/run/docker.sock:/var/run/docker.sock
     environment: *airflow_environment
     command: scheduler
